--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 				<div class="error__submit"></div>
 				<form id="formtest" onsubmit="return validation()">
 					<div class="input__wrapper">
-						<input id="email" type="email" class="form__input" placeholder="e-mail">
+						<input id="email" type="email" class="form__input" placeholder="e-mail" required>
 					</div>
 					<div class="input__wrapper">
-						<input id="password" type="password" class="form__input" placeholder="Password">
+						<input id="password" type="password" class="form__input" placeholder="Password" required>
 					</div>
 					<button class="form__button" type="submit">sign in</button>
 					<p class="form__text">No registered ? <a href="#" class="form__link">Register</a></p>
